# Smart-AI-Resume-Analyzer-and-Ranking-system

./: .gitignore  .vercelignore  README.md  app.py  pyproject.toml  requirements.txt
api/: index.py
models/: metrics.pkl  tfidf.pkl
templates/: index.html  result.html
utils/: feature_extraction.py  ml_model.py  nlp_pipeline.py  parser.py  preprocessing.py  scoring.py  text_extraction.py
