[build-system]
requires = ["setuptools>=69.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-analyzer"
version = "0.1.0"
description = "AI Resume Analyzer and Ranking System"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.0",
    "spacy==3.7.2",
    "nltk==3.8.1",
    "scikit-learn==1.4.1",
    "PyPDF2==4.0.2",
    "sentence-transformers==3.0.1",
    "pandas==2.2.0",
    "matplotlib==3.8.4",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "Werkzeug==3.0.1",
]

[tool.uv.extra-build-dependencies]
pandas = ["pkg_resources"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]
